# PiCar_ROS

./: .gitignore  README.md
.github/: config.yml  labeler.yml  stale.yml
.github/workflows/: labeler.yml
picar/: CHANGELOG.rst  CMakeLists.txt  package.xml
picar_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
picar_bringup/cfg/: Picar.cfg
picar_bringup/launch/: camera.launch  picar-v.launch  picar_core.launch
picar_bringup/scripts/: cammotor.py  controller.py  odom.py  testodom.py  twist2ackermann.py
picar_bringup/scripts/components/: ComponentBase.py  Relay.py  Sensor.py  Servo.py  Throttle.py
picar_bringup/scripts/drivers/: PCA9685.py  TB6612.py
picar_control/: CMakeLists.txt  package.xml
picar_control/config/: ackermann_steering_controller.yaml  ctrl_ackermann_steering_controller.yaml  gains.yaml  steer_bot_hardware_gazebo.yaml
picar_control/launch/: control.launch
picar_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
picar_description/config/: joints.yaml
picar_description/launch/: description.launch  gazebo.launch  simu.launch  slam_mapping_gazebo.launch
picar_description/rviz/: simu.rviz
picar_description/urdf/: config.urdf.xacro  config.xacro  converter.urdf.xacro  gen.sh  imu.urdf.xacro  inertials.xacro  lidar.urdf.xacro  materials.urdf.xacro  materials.xacro  openni.urdf.xacro  picar.urdf.xacro
picar_description/urdf/simulation/models/picar/: model.config
picar_description/urdf/simulation/worlds/: picar.world
picar_example/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
picar_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
picar_navigation/launch/: navigation.launch
picar_navigation/launch/slam/: slam_mapping_cartographer.launch  slam_mapping_gmapping.launch  slam_mapping_hector.launch  slam_mapping_karto.launch  slam_mapping_lama.launch  slam_mapping_lama_pf.launch  slam_mapping_slam_toolbox.launch
picar_navigation/param/: amcl_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  mapper_params_lifelong.yaml  teb_local_planner_params.yaml
picar_slam/: CHANGELOG.rst  CMakeLists.txt  package.xml
picar_teleop/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
picar_teleop/config/: fsi6_std.config.yaml  mulitplexer.yaml  ps3.config.yaml  ps3_std.config.yaml
picar_teleop/launch/: picar_teleop_key.launch  picar_teleop_ps3.launch
