<?xml version="1.0"?>
<package format="2">
  <name>picar_bringup</name>
  <version>0.1.0</version>
  <description>Software for PiCar-V of SunFounder.</description>
  <author>Mickael Gaillard</author>
  <maintainer email="mick.gaillard@gmail.com">Mickael Gaillard</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://www.github.com/theosakamg/picar_ros</url>
  <url type="website">http://wiki.ros.org/picar</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>ackermann_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
