<?xml version="1.0"?>
<package format="2">
    <name>picar_control</name>
    <version>0.1.0</version>
    <description>Software for PiCar-V of SunFounder.</description>
    <author>Mickael Gaillard</author>
    <maintainer email="mick.gaillard@gmail.com">Mickael Gaillard</maintainer>
    <license>Apache 2.0</license>
    <url type="website">http://www.github.com/theosakamg/picar_ros</url>
    <url type="website">http://wiki.ros.org/picar</url>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roslaunch</build_depend>

    <exec_depend>ackermann_steering_controller</exec_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>joint_state_controller</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>roslaunch</exec_depend>
    <exec_depend>picar_description</exec_depend>
    <exec_depend>steer_drive_controller</exec_depend>

    <depend>angles</depend>
    <depend>control_toolbox</depend>
    <depend>hardware_interface</depend>
    <depend>joint_limits_interface</depend>
    <depend>roscpp</depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
      <!-- Other tools can request additional information be placed here -->

    </export>
</package>
