<?xml version="1.0"?>
<package format="2">
  <name>picar_example</name>
  <version>0.1.0</version>
  <description>Software for PiCar-V of SunFounder.</description>
  <author>Mickael Gaillard</author>
  <maintainer email="mick.gaillard@gmail.com">Mickael Gaillard</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://www.github.com/theosakamg/picar_ros</url>
  <url type="website">http://wiki.ros.org/picar</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>actionlib</depend>
  <depend>interactive_markers</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>actionlib_msgs</depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>picar_bringup</exec_depend>

</package>
